--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
     <h1>Hello!</h1>
     <main>this site is currently undergoing renovations, please be patient while I add stuff :3</main>
-    <footer>
-    <img src="./img/trans.png" alt="trans rights" class="trans">
+    <div class="box">
+        <img src="./img/trans.png" alt="trans rights" class="trans">
+    </div>
     </footer>
   </body>
 </html>
