--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <script src="code/jquery-3.6.0.min.js"></script>
   
   <!-- jQuery Terminal CDN -->
-  <link rel="stylesheet" href="code/jquery.terminal.min.css" />
-  <script src="code/jquery.terminal.min.js"></script>
+  <link rel="stylesheet" href="code/jquery.terminal.css" />
+  <script src="code/jquery.terminal.js"></script>
 
 </head>
 <t1>
