--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="code/jquery-3.6.0.min.js"></script>
   
   <!-- jQuery Terminal CDN -->
-  <link rel="stylesheet" href="code/jquery.terminal.css" />
+  <link rel="stylesheet" href="jquery.terminal.css" />
   <script src="code/jquery.terminal.js"></script>
 
 </head>
